[project]
name = "perfi"
version = "0.1.0"
description = "defi portfolio analytics"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9,<3.13"
license = "AGPL-3.0-or-later"
dependencies = [
    "cytoolz>=1.0.1,<2",
    "toolz>=0.12.0,<0.13",
    "psutil>=5.9.0,<6",
    "httpx>=0.28.1,<0.29",
    "httpcore>=1.0.7,<2",
    "h11>=0.14.0,<0.15",
    "rootpath>=0.1.1,<0.2",
    "arrow>=1.2.2,<2",
    "jsonpickle>=2.1.0,<3",
    "XlsxWriter>=3.0.3,<4",
    "pydantic>=2.10.5,<3",
    "fastapi>=0.115.6,<0.116",
    "starlette>=0.41.3,<0.42",
    "anyio>=4.8.0,<5",
    "typer>=0.4.1,<0.5",
    "tqdm>=4.64.0,<5",
    "openpyxl>=3.0.9,<4",
    "beautifulsoup4>=4.10.0,<5",
    "lxml>=4.8.0,<5",
    "prettytable>=3.2.0,<4",
    "rich>=12.1.0,<13",
    "click>=8.1.2,<9",
    "sttable>=0.0.1,<0.0.2",
    "pytz~=2024.2",
    "uvicorn>=0.17.6,<0.18",
    "protobuf==3.20.0",
    "siwe>=4.4.0,<5",
    "eth-account>=0.13.4,<0.14",
    "eth-hash>=0.7.0,<0.8",
    "eth-typing>=5.1.0,<6",
    "eth-keyfile>=0.8.1,<0.9",
    "itsdangerous>=2.1.2,<3",
    "coinaddrvalidator>=1.1.3,<2",
    "python-multipart>=0.0.5,<0.0.6",
    "matplotlib>=3.5.2,<4",
    "pandas>=2.2.3,<3",
    "squarify>=0.4.3,<0.5",
    "plotly>=5.8.0,<6",
    "tabulate>=0.8.9,<0.9",
    "delegator.py>=0.1.1,<0.2",
    "kaleido==0.2.1",
    "colorama>=0.4.4,<0.5",
    "numpy>=1.22.4,<2",
    "scipy>=1.8.1,<2",
    "CurrencyConverter>=0.16.12,<0.17",
    "selenium-wire>=5.1.0,<6",
    "chromedriver-binary-auto>=0.3.1,<0.4",
    "codecov>=2.1.13,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.1.1,<8",
    "pre-commit>=2.18.1,<3",
    "devtools>=0.8.0,<0.9",
    "sttable>=0.0.1,<0.0.2",
    "ipdb>=0.13.9,<0.14",
    "pyinstaller",
]

[tool.uv.sources]
pyinstaller = { git = "https://github.com/pyinstaller/pyinstaller.git", rev = "develop" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
