[project]
name = "perfi"
version = "0.1.0"
description = "defi portfolio analytics"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9,<3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "cytoolz>=1.0.1,<2",
    "toolz>=1.0.0,<2",
    "psutil>=6.1.1,<7",
    "httpx>=0.28.1,<0.29",
    "httpcore>=1.0.7,<2",
    "h11>=0.14.0,<0.15",
    "rootpath>=0.1.1,<0.2",
    "arrow>=1.2.2,<2",
    "jsonpickle>=4.0.1,<5",
    "XlsxWriter>=3.0.3,<4",
    "pydantic>=1.10.20,<2",
    "fastapi>=0.115.6,<0.116",
    "starlette>=0.40.0,<0.42.0",
    "anyio>=4.8.0,<5",
    "typer>=0.15.1,<0.16",
    "tqdm>=4.64.0,<5",
    "openpyxl>=3.0.9,<4",
    "beautifulsoup4>=4.10.0,<5",
    "lxml>=5.3.0,<6",
    "prettytable>=3.2.0,<4",
    "rich>=13.9.4,<14",
    "click>=8.1.2,<9",
    "sttable>=0.0.1,<0.0.2",
    "pytz~=2024.2",
    "uvicorn>=0.34.0,<0.35",
    "protobuf>=5.29.3,<6",
    "siwe>=2.2.0,<2.3.0", # pydantic-v1
    "itsdangerous>=2.1.2,<3",
    "coinaddrvalidator>=1.1.3,<2",
    "python-multipart>=0.0.20,<0.1",
    "matplotlib>=3.10.0,<4",
    "pandas>=2.2.3,<3",
    "squarify>=0.4.3,<0.5",
    "plotly>=5.8.0,<6",
    "tabulate>=0.9.0,<0.10",
    "delegator.py>=0.1.1,<0.2",
    "kaleido==0.2.1",
    "colorama>=0.4.4,<0.5",
    "numpy>=2.2.1,<3",
    "scipy>=1.15.1,<2",
    "CurrencyConverter>=0.18.2,<0.19",
    "selenium-wire>=5.1.0,<6",
    "chromedriver-binary-auto>=0.3.1,<0.4",
    "codecov>=2.1.13,<3",
    "devtools>=0.12.2,<0.13",
    "asttokens>=2.0.0,<3.0.0",
    "executing>=2.1.0,<3",
    "blinker==1.7.0",  # required by selenium-wire
]

[dependency-groups]
dev = [
    "pytest>=7.1.1,<8",
    "pre-commit>=2.18.1,<3",
    "sttable>=0.0.1,<0.0.2",
    "ipdb>=0.13.9,<0.14",
    "pyinstaller",
]

[tool.uv.sources]
pyinstaller = { git = "https://github.com/pyinstaller/pyinstaller.git", rev = "develop" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
